# Tunis

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
backend/: CMakeLists.txt
backend/GL/: Sources.cmake  TunisBackend.cpp  TunisGL.c  TunisRenderState.cpp  TunisTexture.cpp
backend/include/: TunisBackend.h  TunisRect.inl  TunisRenderState.h  TunisSOA.h  TunisSOA.inl  TunisSize.inl  TunisTexture.h  TunisTypes.h  TunisVertex.h
ci/: build-linux.sh  build-osx.sh
cmake/: BuildOptions.cmake
cmake/Hunter/: config.cmake
cmake/toolchains/: clang-3.5.cmake  clang-3.6.cmake  clang-3.7.cmake  clang-3.8.cmake  clang-3.9.cmake  clang-4.0.cmake  clang-5.0.cmake  clang-6.0.cmake  clang-7.0.cmake  gcc-4.7.cmake  gcc-4.8.cmake  gcc-4.9.cmake  gcc-5.cmake  gcc-6.cmake  gcc-7.cmake  osx-10.10.cmake  osx-10.11.cmake  osx-10.12.cmake  osx-10.13.cmake
cmake/toolchains/common/: default.cmake  osx.cmake
include/: Tunis.h  Tunis.inl  TunisBitMask.h  TunisCanvasGradient.h  TunisColor.h  TunisContextState.h  TunisFontDef.h  TunisFontDef.inl  TunisGL.h  TunisGradient.h  TunisGradient.inl  TunisImage.h  TunisImage.inl  TunisMath.h  TunisPaint.h  TunisPaint.inl  TunisPath2D.h  TunisPath2D.inl  TunisPath2DCommand.h  TunisPath2DCommand.inl  TunisPattern.h  TunisPattern.inl  TunisRect.h  TunisRect.inl  TunisRenderState.h  TunisSOA.h  TunisSOA.inl  TunisSize.h  TunisSize.inl  TunisSpinLock.h  TunisTaskQueue.h  TunisTexture.h  TunisTypes.h  TunisUtil.h  TunisVertex.h
include/GL/: Tunis.inl  TunisContextData.h  TunisContextData.inl  TunisGL.h  TunisPath2D.inl
include/NanoVG-GL3/: Tunis.inl  TunisContextData.h  TunisPath2D.inl
samples/: CMakeLists.txt  GenerateSample.cmake  GenerateSample.sh
samples/01_BasicUsage/: CMakeLists.txt  SampleApp.cpp
samples/01_HelloRectangles/: CMakeLists.txt  SampleApp.cpp
samples/01_HelloTriangle/: CMakeLists.txt  SampleApp.cpp
samples/01_SimpleExample/: CMakeLists.txt  SampleApp.cpp
samples/02_DrawingRectangles/: CMakeLists.txt  SampleApp.cpp
samples/03_DrawingTriangle/: CMakeLists.txt  SampleApp.cpp
samples/04_MovingThePen/: CMakeLists.txt  SampleApp.cpp
samples/05_Lines/: CMakeLists.txt  SampleApp.cpp
samples/06_Arcs/: CMakeLists.txt  SampleApp.cpp
samples/07_QuadraticBezierCurves/: CMakeLists.txt  SampleApp.cpp
samples/08_CubicBezierCurves/: CMakeLists.txt  SampleApp.cpp
samples/09_MakingCombinations/: CMakeLists.txt  SampleApp.cpp
samples/10_Path2D/: CMakeLists.txt  SampleApp.cpp
samples/11_FillStyleExample/: CMakeLists.txt  SampleApp.cpp
samples/12_StrokeStyleExample/: CMakeLists.txt  SampleApp.cpp
samples/13_GlobalAlphaExample/: CMakeLists.txt  SampleApp.cpp
samples/14_RGBAExample/: CMakeLists.txt  SampleApp.cpp
samples/15_LineWidthExample/: CMakeLists.txt  SampleApp.cpp
samples/16_LineCapExample/: CMakeLists.txt  SampleApp.cpp
samples/17_LineJoinExample/: CMakeLists.txt  SampleApp.cpp
samples/18_MiterLimit/: CMakeLists.txt  SampleApp.cpp
samples/19_UsingLineDashes/: CMakeLists.txt  SampleApp.cpp
samples/20_CreateLinearGradient/: CMakeLists.txt  SampleApp.cpp
samples/21_CreateRadialGradient/: CMakeLists.txt  SampleApp.cpp
samples/22_CreatePattern/: CMakeLists.txt  SampleApp.cpp
samples/23_ShadowedTextExample/: CMakeLists.txt  SampleApp.cpp
samples/common/: CMakeLists.txt  SampleApp.cpp  SampleApp.h  TunisSampleMainGLFW3.cmake  TunisSampleMainSDL2.cmake  mainGLFW3.cpp  mainSDL2.cpp
samples/template/: CMakeLists.txt.in  SampleApp.cpp.in
schema/: CMakeLists.txt  TunisFonts.fbs
src/: Tunis.cpp  TunisColor.cpp  TunisGL.c  TunisPaint.cpp
src/GL/: Backend.cmake  Sources.cmake  Tunis.cpp  TunisBackend.cpp  TunisContextPriv.inl  TunisFont.h  TunisFont.inl  TunisGL.h  TunisGraphicStates.h  TunisShaderProgram.h  TunisShaderProgram.inl  TunisTexture.cpp  TunisTexture.h  TunisTexture.inl  gradientLinear.frag  gradientRadial.frag  gradientRadial.vert  texture.frag  texture.vert
src/NanoVG-GL3/: Backend.cmake  Sources.cmake  Tunis.cpp  TunisGraphicStates.h  TunisTexture.cpp
tools/: CMakeLists.txt
tools/FontPackager/: CMakeLists.txt  TunisFontGenerator.cpp  TunisFontGenerator.h  TunisFontLoader.cpp  TunisFontLoader.h  TunisFontStyle.cpp  TunisFontStyle.h  TunisGlyph.h  TunisGlyphLoader.cpp  TunisGlyphLoader.h  main.cpp
