add_subdirectory(common)

add_subdirectory(01_SimpleExample)
add_subdirectory(02_DrawingRectangles)
add_subdirectory(03_DrawingTriangle)
add_subdirectory(04_MovingThePen)
add_subdirectory(05_Lines)
add_subdirectory(06_Arcs)
add_subdirectory(07_QuadraticBezierCurves)
add_subdirectory(08_CubicBezierCurves)
add_subdirectory(09_MakingCombinations)
add_subdirectory(10_Path2D)
add_subdirectory(11_FillStyleExample)
add_subdirectory(12_StrokeStyleExample)
add_subdirectory(13_GlobalAlphaExample)
