##
# MIT License
#
# Copyright (c) 2018 Matt Chiasson
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
##
add_subdirectory(common)

add_subdirectory(01_SimpleExample)
add_subdirectory(02_DrawingRectangles)
add_subdirectory(03_DrawingTriangle)
add_subdirectory(04_MovingThePen)
add_subdirectory(05_Lines)
add_subdirectory(06_Arcs)
add_subdirectory(07_QuadraticBezierCurves)
add_subdirectory(08_CubicBezierCurves)
add_subdirectory(09_MakingCombinations)
add_subdirectory(10_Path2D)
add_subdirectory(11_FillStyleExample)
add_subdirectory(12_StrokeStyleExample)
add_subdirectory(13_GlobalAlphaExample)
add_subdirectory(14_RGBAExample)
add_subdirectory(15_LineWidthExample)
add_subdirectory(16_LineCapExample)
add_subdirectory(17_LineJoinExample)
add_subdirectory(18_MiterLimit)
add_subdirectory(19_UsingLineDashes)
add_subdirectory(20_CreateLinearGradient)
add_subdirectory(21_CreateRadialGradient)
